fix: svgs now visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,10 @@ a {
   text-decoration: none;
 }
 
+header {
+  display: flex;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
